--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -6,7 +6,7 @@ header.brand {
 header.brand h1 {
     margin: 0;
     font-weight: 400;
-    color: rgba(65, 70, 75, 1);
+    // color: rgba(65, 70, 75, 1);
     font-size: 3em;
 }
 
@@ -15,21 +15,21 @@ header.brand h2 {
     padding-top: 0rem;
     /*font-style: normal;*/
     /*font-weight: 200;*/
-    color: rgba(100, 105, 110, 1);
+    // color: rgba(100, 105, 110, 1);
 }
 
 header.brand hr {
     text-align: left;
     margin-left: 0;
     width: 75%;
-    border-color: rgba(250, 250, 250, 0.25);
+    // border-color: rgba(250, 250, 250, 0.25);
 }
 
 @media (prefers-color-scheme: dark) {
     header.brand h1 {
-        color: rgba(190, 190, 190, 1);
+        // color: rgba(190, 190, 190, 1);
     }
     header.brand h2 {
-        color: rgba(150, 150, 150, 1);
+        // color: rgba(150, 150, 150, 1);
     }
 }
