--- a/assets/scss/pages/footer.scss
+++ b/assets/scss/pages/footer.scss
@@ -2,7 +2,7 @@
 footer.page-footer{
     padding-top: 1em;
     margin-top: 3em;
-    color: #aaa;
+    // color: #aaa;
     width: 95%;
     max-width: 45rem;
 }
@@ -13,7 +13,7 @@ footer.page-footer p {
     /*font-weight: lighter;*/
 }
 footer.page-footer a {
-    color: rgba(65, 70, 75, 1);
+    // color: rgba(65, 70, 75, 1);
     text-decoration: none;
     background: transparent;
 }
@@ -21,7 +21,7 @@ footer.page-footer hr {
     text-align: left;
     margin-left: 0;
     width: 100%;
-    border-color: rgba(250, 250, 250, 0.25);
+    // border-color: rgba(250, 250, 250, 0.25);
 }
 
 footer.page-footer ul.page-footer-menu {
@@ -39,8 +39,6 @@ footer.page-footer ul.page-footer-menu li {
 	// font-size: 55%;
 }
 
-.copyright {
-}
 .copyright p {
     font-size: 90%;
 }
